--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<title>Enter Your Name Here</title>
+	<title>Vivian Mary Penuelas</title>
 	<body>
 		<p>Hello World</p>
 	</body>
