--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
 	<title>Vivian Mary Penuelas</title>
+    </head>
 	<body>
-		<p>Hello World</p>
+		<h1>Hello World</h1>
+        <p>Vivian Mary Penuelas</p>
 	</body>
 </html>
