--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
 	<title>Vivian Mary Penuelas</title>
     </head>
 	<body>
 		<h1>Hello World</h1>
         <p>Vivian Mary Penuelas</p>
+        <h2>Links</h2>
+        <ul>
+        <li>About Me</li>
+        <li>Contact Me</li>
+        <li>Fan Site</li>
+        <li>Survey</li>
+        <li>App</li>
+        <li>Final</li>
+        </ul>
 	</body>
 </html>
