--- a/index.html
+++ b/index.html
@@ -3,17 +3,40 @@
     <head>
 	<title>Vivian Mary Penuelas</title>
     </head>
-	<body>
-		<h1>Hello World</h1>
-        <p>Vivian Mary Penuelas</p>
-        <h2>Links</h2>
+	<body style="background-color: #CCFFCC">
+		<h1 style="font-family:verdana">Vivian Mary</h1>
+        <p>Hello I'm <b>Vivian Mary,</b> welcome to my website!</p>
+        <br/>
+        <h2 style="font-family:verdana">Assignments</h2>
         <ul>
-        <li>About Me</li>
-        <li>Contact Me</li>
-        <li>Fan Site</li>
-        <li>Survey</li>
-        <li>App</li>
-        <li>Final</li>
+        <li>
+            <a href="about-me.html" target="_blank"> About Me
+            </a>
+            </li>
+        <li>
+            <a href="contact-me.html" target="_blank">Contact Me
+            </a>
+            </li>
+        <li>
+            <a href="fur-babies.html" target="_blank">Meet My Fur-Babies!
+             </a>
+            </li>
+        <li>
+            <a href="" target="_blank">Fan Site
+             </a>
+            </li>
+        <li>
+            <a href="" target="_blank">Survey
+             </a>
+            </li>
+        <li>
+            <a href="">App
+             </a>
+            </li>
+        <li>
+            <a href="">Final
+            </a>
+            </li>
         </ul>
 	</body>
 </html>
