--- a/about-me.html
+++ b/about-me.html
@@ -2,14 +2,26 @@
 <html lang="en">
     <head>
 	<title>Vivian Mary Penuelas</title>
+    
     </head>
-	<body style="background-color: #CCFFCC">
-		<h1 style="font-family:verdana">Vivian Mary</h1>
-        <h2 style="font-family:verdana">About me</h2>
-        <img src="Profile.JPG" alt="profile" width="357" height="353">
+    
+    <link rel="stylesheet" href="Styles/Styles.css">
+	<body>
+		<h1>Vivian Mary</h1>
+        <h2>&#128420; About me &#128420;</h2>
+        <img src="Images/NamePronouns.png" alt="namepronouns">
+        <br>
+        <img src="Images/Profile.png" alt="profile">
         <br>
         <br>
         <br>
-        <p2>My name is <b>Vivian Mary Penuelas,</b> I'm a student at Columbia College Chicago studying Graphic Design. I transfered from Waubonsee Community College where I earned my Associates in Arts, while also doing contracted graphic design and product photography.</p2>
+        <p>My name is <b>Vivian Mary Penuelas,</b> I'm a student at Columbia College Chicago studying Graphic Design. I transfered from Waubonsee Community College where I earned my Associates in Arts, while also doing contracted graphic design and product photography.</p>
+        <br>
+        <br>
+        <a href="index.html" target="_blank"> Home
+            </a>
+        <br>
+        <br>
+        <img src="Images/V_I_V_I_A_N___M_A_R_Y___C_O___L_O_G_O.png" height="150" width="150">
 	</body>
 </html>
