--- a/index.html
+++ b/index.html
@@ -3,40 +3,49 @@
     <head>
 	<title>Vivian Mary Penuelas</title>
     </head>
-	<body style="background-color: #CCFFCC">
-		<h1 style="font-family:verdana">Vivian Mary</h1>
-        <p>Hello I'm <b>Vivian Mary,</b> welcome to my website!</p>
+     <link rel="stylesheet" href="Styles/Styles.css">
+	<body>
+		<h1>Vivian Mary</h1>
         <br>
-        <h2 style="font-family:verdana">Assignments</h2>
-        <ul>
-        <li>
+        <p>Hello I'm Vivian Mary, welcome to my website!</p>
+        <br>
+        <h2> &#128420; Assignments &#128420;</h2>
+        <dl>
+        <dt>
             <a href="about-me.html" target="_blank"> About Me
             </a>
-            </li>
-        <li>
+            </dt>
+            <dt>
+            <a href="favorites.html" target="_blank"> My Favorites
+            </a>
+            </dt>
+        <dt>
             <a href="contact-me.html" target="_blank">Contact Me
             </a>
-            </li>
-        <li>
+            </dt>
+        <dt>
             <a href="fur-babies.html" target="_blank">Meet My Fur-Babies!
              </a>
-            </li>
-        <li>
+            </dt>
+        <dt>
             <a href="" target="_blank">Fan Site
              </a>
-            </li>
-        <li>
+            </dt>
+        <dt>
             <a href="" target="_blank">Survey
              </a>
-            </li>
-        <li>
+            <dt>
+        <dt>
             <a href="">App
              </a>
-            </li>
-        <li>
+            </dt>
+        <dt>
             <a href="">Final
             </a>
-            </li>
-        </ul>
+            </dt>
+        </dl>
+        <br>
+        <br>
+        <img src="Images/V_I_V_I_A_N___M_A_R_Y___C_O___L_O_G_O.png" height="150" width="150">
 	</body>
 </html>
