--- a/contact-me.html
+++ b/contact-me.html
@@ -3,10 +3,18 @@
     <head>
 	<title>Vivian Mary Penuelas</title>
     </head>
-	<body style="background-color: #CCFFCC">
-		<h1 style="font-family:verdana">Vivian Mary</h1>
-        <h2 style="font-family:verdana">Contact Me</h2>
+     <link rel="stylesheet" href="Styles/Styles.css">
+	<body>
+		<h1>Vivian Mary</h1>
+        <h2> &#128420; Contact Me &#128420;</h2>
         <p> Need to chat? <a href="mailto:penuelas@colum.edu">Send me an email!</a> or
         <a href="sms:6303038786">Shoot me a text!</a></p>
+        <br>
+        <br>
+        <a href="index.html" target="_blank"> Home
+            </a>
+        <br>
+        <br>
+        <img src="Images/V_I_V_I_A_N___M_A_R_Y___C_O___L_O_G_O.png" height="150" width="150">
 	</body>
 </html>
