--- a/fur-babies.html
+++ b/fur-babies.html
@@ -3,29 +3,38 @@
     <head>
 	<title>Vivian Mary Penuelas</title>
     </head>
-	<body style="background-color: #CCFFCC">
-		<h1 style="font-family:verdana">Vivian Mary</h1>
-        <h2 style="font-family:verdana">Meet My Fur-Babies</h2>
+    <link rel="stylesheet" href="Styles/Styles.css">
+	<body>
+		<h1>Vivian Mary</h1>
+        <h2> &#128420; Meet My Fur-Babies &#128420; </h2>
          <br>
-        <h2 style="font-family:verdana">Cipher Luna</h2>
+        <h2>Cipher Luna</h2>
         <p>Domestic Short-Hair
             <p>Birthday: 05/02/2020 </p>
-        <img src="Cipher.jpg" alt="Cipher Luna" width="600" height="400">
+        <img src="Images/Cipher.jpg" alt="Cipher Luna" width="600" height="400">
         <br>
         <br>
         <br>
         <br>
-        <h2 style="font-family:verdana">Appa Luna</h2>
+        <h2>Appa Luna</h2>
         <p>Siamese</p>
         <p>Birthday: 02/28/2021</p>
-        <img src="Appa.jpg" alt="Appa Luna" width="600" height="400">
+        <img src="Images/Appa.jpg" alt="Appa Luna" width="600" height="400">
         <br>
         <br>
         <br>
         <br>
-        <h2 style="font-family:verdana">Kylo Luna</h2>
+        <h2>Kylo Luna</h2>
         <p>Siberian Husky and Golden Retriever mix</p>
         <p>Birthday: 04/15/2022</p>
-        <img src="Kylo.jpg" alt="Kylo Luna" width="400" height="500">
+        <img src="Images/Kylo.jpg" alt="Kylo Luna" width="400" height="500">
+        <br>
+        <br>
+        <br>
+        <a href="index.html" target="_blank"> Home
+            </a>
+        <br>
+        <br>
+        <img src="Images/V_I_V_I_A_N___M_A_R_Y___C_O___L_O_G_O.png" height="150" width="150">
 	</body>
 </html>
