--- a/about-me.html
+++ b/about-me.html
@@ -15,7 +15,7 @@
         <br>
         <br>
         <br>
-        <p>My name is <b>Vivian Mary Penuelas,</b> I'm a student at Columbia College Chicago studying Graphic Design. I transfered from Waubonsee Community College where I earned my Associates in Arts, while also doing contracted graphic design and product photography.</p>
+        <p class="one">My name is <b>Vivian Mary Penuelas,</b> I'm a student at Columbia College Chicago studying Graphic Design. I transfered from Waubonsee Community College where I earned my Associates in Arts, while also doing contracted graphic design and product photography.</p>
         <br>
         <br>
         <a href="index.html" target="_blank"> Home
