--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
              </a>
             </dt>
         <dt>
-            <a href="" target="_blank">Fan Site
+            <a href="Fansite/fansite.html" target="_blank">Fan Site
              </a>
             </dt>
         <dt>
