--- a/Fansite/fansite.html
+++ b/Fansite/fansite.html
@@ -26,9 +26,7 @@
             </a>
             </dt>
         </dl>
-         <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=MpaHR-V_R-o">
-</iframe> 
+          <iframe width="420" height="315" src="https://www.youtube.com/embed/MpaHR-V_R-o" title="Gotta Catch ‘Em All!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
          <br>
           <img src="Images/Logo.png">
 	</body>
