--- a/Fansite/fanart.html
+++ b/Fansite/fanart.html
@@ -15,11 +15,26 @@
         <span class="border-span">Here is some fan art I made :3</span>
     </p>
         <br>
-        <img src="Images/PKMN1.png"> <img src="Images/PKMN2.png">
-        <img src="Images/PKMN3.png"> <img src="Images/PKMN4.png">
-        <img src="Images/PKMN5.png"> <img src="Images/PKMN6.png">
-        <img src="Images/PKMN7.png"> <img src="Images/PKMN8.png">
-        <img src="Images/PKMN9.png"> <img src="Images/PKMN10.png">
+        <img src="Images/PKMN1.png"> 
+        <br>
+        <img src="Images/PKMN2.png">
+        <br>
+        <img src="Images/PKMN3.png"> 
+        <br>
+        <img src="Images/PKMN4.png">
+        <br>
+        <img src="Images/PKMN5.png"> 
+        <br>
+        <img src="Images/PKMN6.png">
+        <br>
+        <img src="Images/PKMN7.png"> 
+        <br>
+        <img src="Images/PKMN8.png">
+        <br>
+        <img src="Images/PKMN9.png"> 
+        <br>
+        <img src="Images/PKMN10.png">
+        <br>
         <img src="Images/PKMN11.png">
          <br>
           <img src="Images/Logo.png">
