--- a/Survey/survey.html
+++ b/Survey/survey.html
@@ -12,7 +12,7 @@
         <br>
     <div id="container">
         <h1>&#9733; Artist Survey &#9733;</h1>
-        <form action="Survey/confirmation.html" method="post">
+        <form action="confirmation.html">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
