--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
              </a>
             </dt>
         <dt>
-            <a href="">Final
+            <a href="final/index.html">Final
             </a>
             </dt>
         </dl>
