--- a/final/portfolio-art-1.html
+++ b/final/portfolio-art-1.html
@@ -60,7 +60,7 @@
                     <p class="text-muted">Procreate 
 2388px x 2388px </p>
                     <br>
-                    <p>I created this logo for my business. I wanted this to be rememberable and show my personality. </p>
+                    <p>I created this logo for my business. I wanted this to be memorable and show my personality. </p>
                 </div>
             </div>
         </div>
