--- a/final/shop-stickers.html
+++ b/final/shop-stickers.html
@@ -57,9 +57,9 @@
         
         <div class="row">
             <div class="col-md-12">
-                <a href="#" class="btn btn-secondary category-link" data-filter="all">All</a>
-                <a href="#" class="btn btn-secondary category-link active-custom" data-filter="stickers">Stickers</a>
-                <a href="#" class="btn btn-secondary category-link" data-filter="prints">Prints</a>
+                <a href="shop.html" class="btn btn-secondary category-link" data-filter="all">All</a>
+                <a href="shop-stickers.html" class="btn btn-secondary category-link" data-filter="stickers">Stickers</a>
+                <a href="shop-prints.html" class="btn btn-secondary category-link" data-filter="prints">Prints</a>
             </div>
         </div>
 
