--- a/final/aboutme.html
+++ b/final/aboutme.html
@@ -49,7 +49,7 @@
         <div class="col-md-6">
             <h2>About Me</h2>
             <p>Hey there! I'm Vivian Mary Penuelas, currently diving into the exciting world of graphic design and illustration at Columbia College Chicago. Every day is a canvas for creativity as I pursue a BA in Graphic Design with a minor of Illustration on the side.</p>
-             <p>I'm weaving my creative journey at Columbia. It's not just about the degree; it's about turning my passion into a graphic design and illustration career. &#9733;</p>
+             <p>I'm weaving my creative journey at Columbia. It's not just about the degree; it's about turning my passion into a creative career. &#9733;</p>
         </div>
         <div class="col-md-6">
             <img src="images/Profile.JPG" alt="Profile Picture" class="img-fluid rounded-circle">
